# thawbug

./: Cargo.toml  README.md  package-lock.json  tailwind.config.js
end2end/: playwright.config.ts
end2end/tests/: example.spec.ts
redwood_macros/: Cargo.toml
redwood_macros/src/: lib.rs
src/: Cargo.toml  app.rs  home.rs  lib.rs  main.rs  report.rs
src/components/: aggregate.rs  granularity.rs  mod.rs  report_style.rs
style/: generated.css  main.scss  tailwind.css
